# MathLib

./: .clang-format  .gitmodules  CMakeLists.txt  IntrinEmu.h  MathLib.h  MathLib_d.h  MathLib_f.h  NdcConfig.h  Packed.h  Platform.h  README.md  STL.hlsli  ml.h  ml.hlsli
Guts/: bool1.h  emulation.h  f16.h  f32.h  f64.h  i32.h  math.h  other.h  packing.h  tests.h  u32.h
